Ensured the css iw working

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -23,6 +23,8 @@
     
     <!-- Custom CSS -->
     <link href="{% static 'css/custom.css' %}" rel="stylesheet">
+    <link href="{% static 'css/dashboard.css' %}" rel="stylesheet">
+    <link href="{% static 'css/public.css' %}" rel="stylesheet">
     {% if user.is_authenticated and request.tenant and request.tenant.schema_name != 'public' %}
         <link href="{% static 'css/dashboard.css' %}" rel="stylesheet">
     {% else %}
@@ -462,12 +464,15 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     
     <!-- Custom JavaScript -->
+    <script src="{% static 'js/common.js' %}"></script>
+    <script src="{% static 'js/dashboard.js' %}"></script>
+    <script src="{% static 'js/public.js' %}"></script>
     {% if user.is_authenticated and request.tenant and request.tenant.schema_name != 'public' %}
         <script src="{% static 'js/dashboard.js' %}"></script>
     {% else %}
         <script src="{% static 'js/public.js' %}"></script>
     {% endif %}
-    <script src="{% static 'js/common.js' %}"></script>
+    
     
     <!-- Additional JavaScript -->
     {% block extra_js %}{% endblock %}
