--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -1493,7 +1493,7 @@
                         <p class="mb-0 text-light">&copy; {{ "now"|date:"Y" }} Autowash. All rights reserved.</p>
                     </div>
                     <div class="col-md-6 text-md-end">
-                        <p class="mb-0 text-light">Made with <i class="fas fa-heart text-danger"></i> in Kenya</p>
+                        <p class="mb-0 text-light">Powered by Sysnav Technologies</p>
                     </div>
                 </div>
             </div>
