Added More Templates and updated middlewares
Also Updated Context Processors

--- a/templates/business/settings.html
+++ b/templates/business/settings.html
@@ -1,6 +1,7 @@
 {% extends 'base/base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
+{% load custom_filters %}
 
 {% block title %}Business Settings - Autowash{% endblock %}
 
