--- a/templates/reports/template_form.html
+++ b/templates/reports/template_form.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base/base.html' %}
 {% load static %}
 
 {% block title %}{% if object %}Edit{% else %}Create{% endif %} Report Template{% endblock %}
