--- a/templates/reports/analytics_dashboard.html
+++ b/templates/reports/analytics_dashboard.html
@@ -1,5 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'base/base.html' %}
 {% load static %}
+{% load math_filters %}
 
 {% block title %}Analytics Dashboard{% endblock %}
 
