--- a/templates/reports/report_detail.html
+++ b/templates/reports/report_detail.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base/base.html' %}
 {% load static %}
 
 {% block title %}{{ report.template.name }} - Report{% endblock %}
